--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "puppeteer": "^24.17.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.13.0",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
